[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Roboto-24.tres" type="DynamicFont" id=1]
[ext_resource path="res://Fonts/Roboto/Roboto-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scenes/RichTable.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Market.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="Market" type="Control"]
margin_right = 550.0
margin_bottom = 920.0
rect_min_size = Vector2( 550, 920 )
size_flags_horizontal = 3
size_flags_vertical = 0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarketContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 550.0
margin_bottom = 99.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopItems" type="HBoxContainer" parent="MarginContainer/MarketContainer"]
margin_right = 550.0
margin_bottom = 75.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OfferTrade" type="Button" parent="MarginContainer/MarketContainer/TopItems"]
margin_right = 138.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 75 )
custom_fonts/font = SubResource( 1 )
text = "Make Offer"

[node name="Filters" type="GridContainer" parent="MarginContainer/MarketContainer/TopItems"]
margin_left = 148.0
margin_right = 301.0
margin_bottom = 75.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Include self" type="CheckBox" parent="MarginContainer/MarketContainer/TopItems/Filters"]
margin_right = 153.0
margin_bottom = 37.0
custom_fonts/font = ExtResource( 1 )
text = "Include self"

[node name="HSpace" type="Control" parent="MarginContainer/MarketContainer/TopItems"]
margin_left = 311.0
margin_right = 440.0
margin_bottom = 75.0
size_flags_horizontal = 3

[node name="Purchase" type="Button" parent="MarginContainer/MarketContainer/TopItems"]
margin_left = 450.0
margin_right = 550.0
margin_bottom = 75.0
rect_min_size = Vector2( 100, 75 )
custom_fonts/font = SubResource( 1 )
disabled = true
text = "Trade"

[node name="HSeparator" type="HSeparator" parent="MarginContainer/MarketContainer"]
margin_top = 85.0
margin_right = 550.0
margin_bottom = 89.0
size_flags_horizontal = 3

[node name="ErrorLabel" type="Label" parent="MarginContainer/MarketContainer"]
visible = false
margin_top = 99.0
margin_right = 550.0
margin_bottom = 113.0
align = 1

[node name="RichTable" parent="MarginContainer/MarketContainer" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 99.0
margin_right = 550.0
margin_bottom = 99.0
rect_scale = Vector2( 1, 1 )
[connection signal="item_selected" from="MarginContainer/MarketContainer/RichTable" to="." method="_on_RichTable_item_selected"]
[connection signal="item_unselected" from="MarginContainer/MarketContainer/RichTable" to="." method="_on_RichTable_item_unselected"]
[connection signal="sort_by" from="MarginContainer/MarketContainer/RichTable" to="." method="_on_RichTable_sort_by"]
